[gd_scene load_steps=2 format=3 uid="uid://dwnho3m4hcmbh"]

[ext_resource type="Script" path="res://Scenes/Main/World.gd" id="1_cpycn"]

[node name="World" type="Node2D"]
script = ExtResource("1_cpycn")

[node name="Menu" type="VBoxContainer" parent="."]
offset_left = 19.0
offset_top = 15.0
offset_right = 77.0
offset_bottom = 93.0

[node name="ServerBtn" type="Button" parent="Menu"]
layout_mode = 2
text = "Server"

[node name="ClientBtn" type="Button" parent="Menu"]
layout_mode = 2
text = "Client"

[node name="NetworkInfo" type="VBoxContainer" parent="."]
offset_left = 517.0
offset_top = 4.0
offset_right = 572.0
offset_bottom = 82.0

[node name="NetworkSideDisplay" type="Label" parent="NetworkInfo"]
layout_mode = 2

[node name="UniquePeerID" type="Label" parent="NetworkInfo"]
layout_mode = 2

[node name="Lag" type="HBoxContainer" parent="."]
visible = false
offset_left = 106.0
offset_top = 13.0
offset_right = 209.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="Lag"]
layout_mode = 2
text = "Lag:"

[node name="LineEdit" type="LineEdit" parent="Lag"]
layout_mode = 2
text = "0.250"

[connection signal="pressed" from="Menu/ServerBtn" to="." method="_on_server_btn_pressed"]
[connection signal="pressed" from="Menu/ClientBtn" to="." method="_on_client_btn_pressed"]
[connection signal="text_submitted" from="Lag/LineEdit" to="." method="_on_line_edit_text_submitted"]
